--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 
   <div [ngClass]="full.a ? 'col-md-12 col-sm-12 col-xs-12' : 'col-md-6 col-sm-12 col-xs-12'">
-    <mk-box header="Top Most Concurrent Login Users" [isCollapsable]="false" [isRemovable]="false"
+    <mk-box header="Table 1" [isCollapsable]="false" [isRemovable]="false"
       contentStyleClass="table-responsive">
       <mk-box-header>
         <div class="box-tools pull-right">
@@ -37,7 +37,7 @@
   </div>
 
   <div [ngClass]="full.b ? 'col-md-12 col-sm-12 col-xs-12' : 'col-md-6 col-sm-12 col-xs-12'">
-    <mk-box header="Top Most Concurrent Login Users" [isCollapsable]="false" [isRemovable]="false"
+    <mk-box header="Graph for table 1" [isCollapsable]="false" [isRemovable]="false"
       contentStyleClass="table-responsive">
       <mk-box-header>
           <div class="box-tools pull-right">
@@ -53,7 +53,7 @@
   </div>
 
   <div [ngClass]="full.c ? 'col-md-12 col-sm-12 col-xs-12' : 'col-md-6 col-sm-12 col-xs-12'">
-    <mk-box header="Top Most Concurrent Login Users" [isCollapsable]="false" [isRemovable]="false"
+    <mk-box header="Table 2" [isCollapsable]="false" [isRemovable]="false"
       contentStyleClass="table-responsive">
       <mk-box-header>
           <div class="box-tools pull-right">
@@ -89,7 +89,7 @@
   
 
   <div [ngClass]="full.d ? 'col-md-12 col-sm-12 col-xs-12' : 'col-md-6 col-sm-12 col-xs-12'">
-    <mk-box header="Top Most Concurrent Login Users" [isCollapsable]="false" [isRemovable]="false"
+    <mk-box header="Table 3" [isCollapsable]="false" [isRemovable]="false"
       contentStyleClass="table-responsive">
       <mk-box-header>
           <div class="box-tools pull-right">
