full width function

--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
       contentStyleClass="table-responsive">
       <mk-box-header>
         <div class="box-tools pull-right">
-            <button mat-icon-button class="mat-icon-button-nav">
+            <button mat-icon-button class="mat-icon-button-nav" (click)="toggle('a')">
                 <mat-icon ><i class="fa fa-fw fa-arrows-alt"></i></mat-icon>
               </button>
         </div>
@@ -41,7 +41,7 @@
       contentStyleClass="table-responsive">
       <mk-box-header>
           <div class="box-tools pull-right">
-              <button mat-icon-button class="mat-icon-button-nav">
+              <button mat-icon-button class="mat-icon-button-nav" (click)="toggle('b')">
                   <mat-icon ><i class="fa fa-fw fa-arrows-alt"></i></mat-icon>
                 </button>
           </div>
@@ -57,7 +57,7 @@
       contentStyleClass="table-responsive">
       <mk-box-header>
           <div class="box-tools pull-right">
-              <button mat-icon-button class="mat-icon-button-nav">
+              <button mat-icon-button class="mat-icon-button-nav" (click)="toggle('c')">
                   <mat-icon ><i class="fa fa-fw fa-arrows-alt"></i></mat-icon>
                 </button>
           </div>
@@ -93,7 +93,7 @@
       contentStyleClass="table-responsive">
       <mk-box-header>
           <div class="box-tools pull-right">
-              <button mat-icon-button class="mat-icon-button-nav">
+              <button mat-icon-button class="mat-icon-button-nav" (click)="toggle('d')">
                   <mat-icon ><i class="fa fa-fw fa-arrows-alt"></i></mat-icon>
                 </button>
           </div>
